@@ -58,6 +58,7 @@ Template for new versions:
 
 ## Fixes
 - `sort`: fix potential crash when removing jobs directly from the Tasks info screen
+- `misery`: fix error when changing the misery factor
 
 ## Misc Improvements
 - wherever units are listed in DFHack tools, properties like "agitated" or (-trained-) are now shown
